syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.binghe.proto";
option java_outer_classname = "HelloWorldProto";

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
  rpc helloServerStream(HelloRequest) returns (stream HelloResponse);
  rpc helloClientStream(stream HelloRequest) returns (HelloResponse);
  rpc helloBiStream(stream HelloRequest) returns (stream HelloResponse);
}
